ingress/kong-ingress-admin-api-private.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-admin-api-ingress
  namespace: kong
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
    - host: kong-admin.gobleh.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-cp-kong-admin
                port:
                  number: 8001
