ingress/kong-ingress-manager-private.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-manager-ingress
  namespace: kong
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
    - host: kong-manager.gobleh.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-cp-kong-manager
                port:
                  number: 8002
