ingress/kong-ingress-monitoring-private.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-monitgoring-ingress
  namespace: kong
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
    - host: kong-monitoring.gobleh.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-dp-kong-monitoring
                port:
                  number: 8100
