ingress/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: kong
  annotations:
    # This tells Kubernetes to use Kong to handle this Ingress
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: kong-proxy.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kong-dp-kong-proxy
                port:
                  number: 80
